--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         	<span class="moves">3</span> Moves
 
-            <div class="restart">
+          <div class="restart">
         		<i class="fa fa-repeat"></i>
         	</div>
         </section>
@@ -81,6 +81,7 @@
         </ul>
     </div>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
